[package]
name = "website"
version = "3.0.0"
authors = ["k27dong"]
edition = "2021"
description = "My website (https://kefan.me)"
default-run = "website"

[lib]
name = "sitecore"
path = "src/lib.rs"

[features]
shuttle = []

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4"
cfg-if = "1.0.0"
chrono = "0.4.31"
chrono-tz = "0.8.5"
colored = "2.1.0"
difference = "2.0.0"
encoding_rs = "0.8.33"
glob = "0.3.1"
google-sheets4 = "5.0.4"
inquire = "0.7.0"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
shuttle-actix-web = "0.47.0"
shuttle-runtime = "0.47.0"
